# Pre-Pair

./: README.md
src/: CHANGES  CMakeLists.txt  ChangeLog  Makefile  PrePairConfig.h.in  add_subdirectory_once.cmake  casefold.c  casefold.h  common-def.h  fcode.c  fcode.h  global.cmake  main-prepair.c  main-stem.c  nonword.c  nonword.h  prepair-defn.h  prepair.c  prepair.h  stem.c  stem.h  ustring.c  ustring.h  wmalloc.c  wmalloc.h  word.c  word.h
